# YandexMLTrain3

./: README.md  pyproject.toml
homeworks-ml-3/: main.py
homeworks-ml-3/hw01/hw_a/: 01_attention.ipynb  template_p01.py
homeworks-ml-3/hw01/hw_a/.ipynb_checkpoints/: 01_attention-checkpoint.ipynb
homeworks-ml-3/hw01/hw_b/: 02_hw_fmnist_classification.ipynb  submission_dict_fmnist_task_1.json
homeworks-ml-3/hw02/hw_a_b/: 01_crossentropy_method.ipynb  sessions_to_send.json  template_crossentropy.py
homeworks-ml-3/hw03/hw_a/: 01_qlearning.ipynb  template_qlearning.py
homeworks-ml-3/hw04/hw_a/: 01_reinforce.ipynb  template_reinforce.py
