[project]
name = "yandexmltrain3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
